# NLP_mental_distress_analysis

./: .gitignore  01_cleaning_data.ipynb  02_modele_psycho.ipynb  pyproject.toml  readme.md
App/Streamlit/: app.py  emotion_chart.py
App/Streamlit/assets/: about.html  about_enhanced.html
App/Streamlit/static/: custom.css
App/controller/: test_model.py
App/model/: fine_tune_distress_model.py  fine_tune_google_collab.py  go_emotions.py  training_results.json
App/model/checkpoints/checkpoint-1120/: config.json  model.safetensors  rng_state.pth  trainer_state.json
App/model/checkpoints/checkpoint-1680/: model.safetensors  rng_state.pth  trainer_state.json
streamlit_app/: app.py
streamlit_app/pages/: 1_home.py  2_simulation.py
