[project]
name = "nlp-mental-distress-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Guillon",email = "nicolas.guillon95@yahoo.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "tensorflow-hub (>=0.16.1,<0.17.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "tokenization (>=1.0.7,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
