[project]
name = "NLP-Tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Eliandy DUMORTIER",email = "rymer.eliandy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "django (>=5.2.3,<6.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "transformers (==4.52.4)",
    "accelerate (==0.30.1)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pre-commit = "^4.2.0"

